# ROS-1

./: README.md  rosrun找不到catkin_make生成的可执行文件  ros使用的一般步骤  编译.msg或者.srv文件不生成头文件.h
ros_ws/catkin_ws/: ros_1--创建功能包
ros_ws/catkin_ws/devel/: .catkin
ros_ws/catkin_ws/devel/include/learning_service/: PersonRequest.h
ros_ws/catkin_ws/devel/include/learning_topic/: Person.h
ros_ws/catkin_ws/devel/lib/learning_parameter/: para
ros_ws/catkin_ws/devel/lib/learning_service/: person_client  person_server  turtle_command_server  turtle_spawn
ros_ws/catkin_ws/devel/lib/learning_topic/: msg_pub  msg_sub
ros_ws/catkin_ws/devel/lib/pkgconfig/: learning_parameter.pc  learning_service.pc  learning_topic.pc  test_pkg.pc
ros_ws/catkin_ws/devel/share/learning_parameter/cmake/: learning_parameterConfig.cmake
ros_ws/catkin_ws/devel/share/learning_service/cmake/: learning_service-msg-extras.cmake  learning_serviceConfig.cmake
ros_ws/catkin_ws/devel/share/learning_topic/cmake/: learning_topic-msg-extras.cmake  learning_topic-msg-paths.cmake  learning_topicConfig.cmake
ros_ws/catkin_ws/devel/share/roseus/ros/learning_service/: manifest.l
ros_ws/catkin_ws/devel/share/roseus/ros/learning_topic/: manifest.l
ros_ws/catkin_ws/devel/share/test_pkg/cmake/: test_pkgConfig.cmake
ros_ws/catkin_ws/install/: .rosinstall  local_setup.sh  setup.sh
ros_ws/catkin_ws/src/learning_parameter/: CMakeLists.txt  package.xml
ros_ws/catkin_ws/src/learning_parameter/src/: parameter_config.cpp
ros_ws/catkin_ws/src/learning_service/: CMakeLists.txt  package.xml
ros_ws/catkin_ws/src/learning_service/src/: person_server.cpp  turtle_command_server.cpp  turtle_spawn.cpp
ros_ws/catkin_ws/src/learning_tf/: CMakeLists.txt  package.xml
ros_ws/catkin_ws/src/learning_topic/: CMakeLists.txt
ros_ws/catkin_ws/src/learning_topic/msg/: Person.msg
ros_ws/catkin_ws/src/learning_topic/src/: Person_publisher.cpp  Person_subscriber.cpp  main.cpp  sub.cpp
(+8 files in other folders)
